# quantrade

./: .env  .env.example  .gitignore  README.md  init_db.py  main.py  pyproject.toml  requirements.txt  server.py  start.sh
backend/: init_db.py  server.py
backend/quant/: account.py  strategy.py  task.py  trade.py
backend/quant/utils/: config.py  context.py  db.py  logger.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  BackendAPI.js  index.css
frontend/src/components/: basic.js
frontend/src/pages/: AccountPage.js  StatusPage.js  StrategyPage.js  TaskPage.js
frontend/src/styles/: index.css  index.raw.css
quote/: account.py  config.py  db.py  strategy.py  task.py  trade.py
src/: __init__.py  account.py  client.py  config.py  strategy.py  task.py  trade.py
