[project]
name = "pawquant-trade-project"
version = "1.0.0"
description = "PawQuant Trade"
dependencies = [
    "longport==3.0.11",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "PyMySQL==1.1.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "apscheduler==3.10.4",
]
requires-python = ">=3.11"
